Fixed a WYSWYG editor issue where tooltip was out of bounds

--- a/assets/snow/tooltip.styl
+++ b/assets/snow/tooltip.styl
@@ -7,7 +7,7 @@ tooltipMargin = 8px
     box-shadow: 0px 0px 5px shadowColor
     color: textColor
     padding: 5px 12px
-    white-space: nowrap
+    white-space: normal
     &::before
       content: "Visit URL:"
       line-height: 26px
